# Buchnancials

./: .gitignore  README.md  instructions.md  issues.md  pyproject.toml
app/: __init__.py  launcher.py  main.py
app/api/: routes_categories.py  routes_import.py  routes_reports.py  routes_rules.py  routes_snapshot.py  routes_transactions.py
app/core/: category_colors.py  config.py  db.py  paths.py
app/frontend/static/css/: styles.css
app/frontend/static/js/: categories.js  common.js  import.js  planning.js  rules.js  transactions.js  transactions_raw.js
app/frontend/templates/: base.html  categories.html  import.html  index.html  planning.html  rules.html  transactions_raw.html
app/models/: __init__.py  category.py  import_job.py  rule.py  transaction.py
app/services/: categorization.py  csv_import.py  csv_preview.py  deduplication.py  reporting.py  sankey.py  snapshot.py
packaging/: Buchnancials.spec
scripts/: build_windows.ps1  build_windows.sh  run_dev.sh
tests/: test_categorization.py  test_category_colors.py  test_csv_preview.py  test_deduplication.py  test_import_and_reporting.py  test_paths.py  test_sankey.py  test_snapshot.py
