[project]
name = "buchnancials"
version = "0.1.0"
description = "Local-first personal cash flow tracking app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "plotly>=5.24.1",
  "python-multipart>=0.0.12",
  "uvicorn[standard]>=0.31.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
