[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buchnancials"
version = "0.1.0"
description = "Local-first personal cash flow tracking app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "plotly>=5.24.1",
  "python-multipart>=0.0.12",
  "uvicorn[standard]>=0.31.0",
]

[project.scripts]
buchnancials = "app.launcher:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
]
build = [
  "pyinstaller>=6.14.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = [
  "frontend/templates/*.html",
  "frontend/static/css/*.css",
  "frontend/static/js/*.js",
  "frontend/static/img/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
